[tool.poetry]
name = "lms-backend"
version = "0.1.0"
description = "Library management system API with django rest framework"
authors = ["Rajan Karki <rajankarkee8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
